CHORE: Implementando HEADER do Site

--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRStudio</title>
+    <title>MRStudio - A Terra da Felicidade</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+    <div class="background-green">
+        <!-- Init Header -->
+        <header>
+            <!-- Init Container -->
+            <div class="container">
+                <!-- Init Nav -->
+                <nav>
+                    <div class="soon">
+                        <a href="index.html">MRStudio</a>
+                    </div>
+
+                    <ul class="nav-ul">
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Tipos</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#"><button class="btn-gradient">Começar</button></a></li>
+                    </ul>
+                </nav>
+                <!-- End Nav -->
+            </div>
+            <!-- End Container -->
+        </header>
+        <!-- End Header -->
+
+        <!-- Init Main -->
+        <main>
+            <!-- Init Container -->
+            <div class="container">
+                <!-- Init Main Text -->
+                <div class="main-text">
+                    <h1>A Terra da Felicidade</h1>
+                    <h2>Moderno & Clássico</h2>
+
+                    <div>
+                        <button class="btn-gradient">Reservar Agora</button>
+                        <img src="assets/img/checked.png" alt="Verificado">
+                    </div>
+                </div>
+                <!-- End Main Text -->
+
+                <!-- Init Main Image -->
+                <div class="main-img">
+                    <img src="assets/img/img-header.png">
+                </div>
+                <!-- End Main Image -->
+            </div>
+            <!-- End Container -->
+        </main>
+        <!-- End Main -->
+    </div>
+
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
