CHORE: Implementando responsividade no HEADER

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                         <li><a href="#">Contato</a></li>
                         <li><a href="#"><button class="btn-gradient">Começar</button></a></li>
                     </ul>
+
+                    <div class="nav-menuicon">
+                        <img src="assets/img/menu.png">
+                    </div>
                 </nav>
                 <!-- End Nav -->
             </div>
@@ -46,7 +50,7 @@
 
                     <div>
                         <button class="btn-gradient">Reservar Agora</button>
-                        <img src="assets/img/checked.png" alt="Verificado">
+                        <img src="assets/img/checked.png">
                     </div>
                 </div>
                 <!-- End Main Text -->
