CHORE: Implementando SECTION de resultados

--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 
 <body>
     <div class="background-green">
-        <!-- Init Header -->
         <header>
-            <!-- Init Container -->
             <div class="container">
-                <!-- Init Nav -->
                 <nav>
                     <div class="soon">
                         <a href="index.html">MRStudio</a>
@@ -33,17 +30,11 @@
                         <img src="assets/img/menu.png">
                     </div>
                 </nav>
-                <!-- End Nav -->
             </div>
-            <!-- End Container -->
         </header>
-        <!-- End Header -->
 
-        <!-- Init Main -->
         <main>
-            <!-- Init Container -->
             <div class="container">
-                <!-- Init Main Text -->
                 <div class="main-text">
                     <h1>A Terra da Felicidade</h1>
                     <h2>Moderno & Clássico</h2>
@@ -53,18 +44,27 @@
                         <img src="assets/img/checked.png">
                     </div>
                 </div>
-                <!-- End Main Text -->
 
-                <!-- Init Main Image -->
                 <div class="main-img">
                     <img src="assets/img/img-header.png">
                 </div>
-                <!-- End Main Image -->
             </div>
-            <!-- End Container -->
         </main>
-        <!-- End Main -->
     </div>
+
+    <section class="results">
+        <div class="container">
+            <div class="result-text">
+                Ajudando pessoas e grandes empresas com foco no conforto.
+            </div>
+
+            <div class="result-numbers">
+                <p><span>+50 mil</span><br>Clientes</p>
+                <p><span>+20 mil</span><br>Funcionários</p>
+                <p><span>+60 mil</span><br>Projetos</p>
+            </div>
+        </div>
+    </section>
 
     <script src="assets/js/main.js"></script>
 </body>
