--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="background-green">
+    <div class="header-main-green">
         <header>
             <div class="container">
                 <nav>
@@ -20,8 +20,8 @@
 
                     <ul class="nav-ul">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Tipos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Diferenciais</a></li>
                         <li><a href="#">Contato</a></li>
                         <li><a href="#"><button class="btn-gradient">Começar</button></a></li>
                     </ul>
@@ -62,6 +62,28 @@
                 <p><span>+50 mil</span><br>Clientes</p>
                 <p><span>+20 mil</span><br>Funcionários</p>
                 <p><span>+60 mil</span><br>Projetos</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="differentials">
+        <div class="container">
+            <div class="card">
+                <img src="assets/img/medal.png">
+                <h3 class="title">Empresa Profissional</h3>
+                <p>Ao contrário do que se acredita, Lorem Ipsum não é simplesmente um texto randômico. Com mais de 2000 anos, suas raízes podem ser encontradas em uma obra de literatura latina clássica datada de 45 AC.</p>
+            </div>
+
+            <div class="card">
+                <img src="assets/img/24h.png">
+                <h3 class="title">Consultoria 24 Horas</h3>
+                <p>Existem muitas variações disponíveis de passagens de Lorem Ipsum, mas a maioria sofreu algum tipo de alteração, seja por inserção de passagens com humor, ou palavras aleatórias que não parecem nem um pouco convincentes.</p>
+            </div>
+
+            <div class="card">
+                <img src="assets/img/caixa.png">
+                <h3 class="title">Trabalhando em Vários Países</h3>
+                <p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
             </div>
         </div>
     </section>
