CHORE: Implementando SECTION das casas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">Resultados</a></li>
                         <li><a href="#">Diferenciais</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#">Casas</a></li>
                         <li><a href="#"><button class="btn-gradient">Começar</button></a></li>
                     </ul>
 
@@ -81,9 +81,26 @@
             </div>
 
             <div class="card">
-                <img src="assets/img/caixa.png">
+                <img src="assets/img/box.png">
                 <h3 class="title">Trabalhando em Vários Países</h3>
                 <p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="home">
+        <div class="container">
+            <div class="home-img">
+                <img src="assets/img/home.png">
+            </div>
+
+            <div class="home-text">
+                <h2>Construção das suas casas particulares</h2>
+                <p>Existem muitas variações disponíveis de passagens de Lorem Ipsum, mas a maioria sofreu algum tipo de alteração, seja por inserção de passagens com humor, ou palavras aleatórias que não parecem nem um pouco convincentes.</p>
+                
+                <img src="assets/img/user-happy.png" alt="">
+
+                <p><b>+50 clientes satisfeitos</b></p>
             </div>
         </div>
     </section>
