CHORE: Implementando SECTION de melhores casas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRStudio - A Terra da Felicidade</title>
+    <title>MRStudio - Bussines</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -100,7 +101,40 @@
                 
                 <img src="assets/img/user-happy.png" alt="">
 
-                <p><b>+50 clientes satisfeitos</b></p>
+                <p><b>+50 Clientes satisfeitos</b></p>
+            </div>
+        </div>
+    </section>
+
+    <section class="best-places">
+        <div class="container">
+            <p class="blue">Escolha o melhor lugar</p>
+            <h2>30 melhores lugares do mundo</h2>
+
+            <div class="cards">
+                <div class="card-item">
+                    <img src="assets/img/home1.png">
+                    <p class="place-home">Los Angeles, USA</p>
+                    <p class="name-home">beHome</p>
+                    <p class="contact-home">1234 567 8900 <br> agency@gmail.com</p>
+                    <button>3 Propriedades</button>
+                </div>
+
+                <div class="card-item">
+                    <img src="assets/img/home2.png">
+                    <p class="place-home">Los Angeles, USA</p>
+                    <p class="name-home">beHome</p>
+                    <p class="contact-home">1234 567 8900 <br> agency@gmail.com</p>
+                    <button>3 Propriedades</button>
+                </div>
+
+                <div class="card-item">
+                    <img src="assets/img/home3.png">
+                    <p class="place-home">Los Angeles, USA</p>
+                    <p class="name-home">beHome</p>
+                    <p class="contact-home">1234 567 8900 <br> agency@gmail.com</p>
+                    <button>3 Propriedades</button>
+                </div>
             </div>
         </div>
     </section>
