CHORE: Implementando FOOTER

--- a/index.html
+++ b/index.html
@@ -139,6 +139,48 @@
         </div>
     </section>
 
+    <footer>
+        <div class="container">
+            <ul>
+                <h3>MRStudio</h3>
+
+                <li><a href="">Home</a></li>
+                <li><a href="">Preços</a></li>
+                <li><a href="">Baixar</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Serviços</a></li>
+            </ul>
+
+            <ul>
+                <h3>Suporte</h3>
+
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Como Funciona</a></li>
+                <li><a href="">Caracteristicas</a></li>
+                <li><a href="">Contato</a></li>
+                <li><a href="">Ouvidoria</a></li>
+            </ul>
+
+            <ul>
+                <h3>Contato</h3>
+
+                <li><p>+880 12345678</p></li>
+                <li><p>contato@gmail.com</p></li>
+
+                <div class="social-networks">
+                    <img src="assets/img/instagram.png">
+                    <img src="assets/img/facebook.png">
+                    <img src="assets/img/twitter.png">
+                    <img src="assets/img/linkedin.png">
+                </div>
+            </ul>
+        </div>
+
+        <div class="footer-developers">
+            <a href="">Desenvolvido por <a href="">AlthDevelopmento &copy; 2022</a>
+        </div>
+    </footer>
+
     <script src="assets/js/main.js"></script>
 </body>
 
