CHORE: Melhorando versão mobile do site

--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">Resultados</a></li>
                         <li><a href="#">Diferenciais</a></li>
-                        <li><a href="#">Casas</a></li>
-                        <li><a href="#"><button class="btn-gradient">Começar</button></a></li>
+                        <li><a href="#">Construção</a></li>
+                        <li><a href="#">Melhores Casas</a></li>
                     </ul>
+
+                    <div class="nav-button">
+                        <a href="#"><button class="btn-gradient">Começar</button></a>
+                    </div>
+
+                    <div class="navmenu-text">
+                        <h1>Navegação</h1>
+                    </div>
 
                     <div class="nav-menuicon">
                         <img src="assets/img/menu.png">
